# leetcode-craft

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties
interview-history/: move-zero-to-the-end.ipynb  possibility-n-parentheses.ipynb  rakuten-binarian.ipynb
leetcode/: 1004-max-consecutive-ones-iii.ipynb  104-maximum-depth-of-binary-tree.ipynb  1071-greatest-common-divisor-of-strings.ipynb  1137-n-th-tribonacci-number.ipynb  1143-longest-common-subsequence.ipynb  1161-maximum-level-sum-of-a-binary-tree.ipynb  1207-unique-number-of-occurrences.ipynb  123-best-time-to-buy-and-sell-stock-iii.ipynb  1268-search-suggestions-system.ipynb  127-word-ladder.ipynb  1318-minimum-flips-to-make-a-or-b-equal-to-c.ipynb  136-single-number.ipynb  1372-longest-zigzag-path-in-a-binary-tree.ipynb  139-word-break.ipynb  1431-kids-with-the-greatest-number-of-candies.ipynb  1448-count-good-nodes-in-binary-tree.ipynb  146-lru-cache.ipynb  1466-reorder-routes-to-make-all-paths-lead-to-the-city-zero.ipynb  1493-longest-subarray-of-1's-after-deleting-one-element.ipynb  162-find-peak-element.ipynb  (+59 more)
leetcode-75/: 1161-maximum-level-sum-of-a-binary-tree.ipynb  1448-count-good-nodes-in-binary-tree.ipynb  1657-determine-if-two-strings-are-close.ipynb  2095-delete-the-middle-node-of-a-linked-list.ipynb  2352-equal-row-and-column-pairs.ipynb  2390-removing-stars-from-a-string.ipynb  2462-total-cost-to-hire-k-workers.ipynb  450-delete-node-in-a-bst.ipynb  547-number-of-provinces.ipynb  649-dota2-senate.ipynb  994-rotting-oranges.ipynb
(+8 files in other folders)
